RESOLVED FIXED200743
Missing exception check in string compare.
https://bugs.webkit.org/show_bug.cgi?id=200743
Summary Missing exception check in string compare.
Mark Lam
Reported 2019-08-14 16:25:27 PDT
Attachments
proposed patch. (2.28 KB, patch)
2019-08-14 16:28 PDT, Mark Lam
msaboff: review+
Mark Lam
Comment 1 2019-08-14 16:28:30 PDT
Created attachment 376330 [details] proposed patch.
Mark Lam
Comment 2 2019-08-14 16:37:18 PDT
Thanks for the review. Landed in r248694: <http://trac.webkit.org/r248694>.
Note You need to log in before you can comment on or make changes to this bug.