Missing exception check in string compare. https://bugs.webkit.org/show_bug.cgi?id=200743 <rdar://problem/53975356>

Reviewed by Michael Saboff.

JSTests:

* stress/missing-exception-check-in-string-compare.js: Added.

Source/JavaScriptCore:

* runtime/JSString.cpp:
(JSC::JSString::equalSlowCase const):



Canonical link: https://commits.webkit.org/214479@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248694 268f45cc-cd09-0410-ab3c-d52691b4dbfc